--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "editor/static/codemirror2"]
 	path = editor/static/codemirror2
-	url = git://github.com/marijnh/CodeMirror2.git
+	url = git://github.com/marijnh/CodeMirror.git
