--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "editor/static/codemirror2"]
 	path = editor/static/codemirror2
 	url = git://github.com/marijnh/CodeMirror.git
+[submodule "editor/static/codemirror"]
+	path = editor/static/codemirror
+	url = git://github.com/marijnh/CodeMirror.git
